TEST_PROGRAMS/INVALID/teng_long/bad_4.min
# missing ';' after statement

var x : float

